# shai

./: .gitignore  Cargo.toml  QUICKREF.md  README.md  install.sh  validate.sh
.github/workflows/: release.yml
src/: ai.rs  bookmark.rs  bookmark.rs.template  command.rs  config.rs  history.rs  history_tests.rs  lib.rs  main.rs  storage.rs
