[package]
name = "shai"
version = "0.1.0"
authors = ["Chien-hsin Yang <y1j2x345@gmail.com>"]
edition = "2021"
repository = "https://github.com/y1j2x34/shai"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
cmd_lib = "1.9.5"
dotenvy = "0.15.7"
inquire = "0.7.5"
openai-api-rs = { version = "5.2.3", default-features = false, features = ["rustls"] }
os_type = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }

[[bin]]
path = "src/main.rs"
name = "shai"
test = false

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

# [target.armv7-unknown-linux-gnueabihf]
# linker = "arm-linux-gnueabihf-gcc"
# rustflags = ["-C", "target-feature=+crt-static"]

# [workspace.metadata.dist.dependencies.apt]
# gcc-aarch64-linux-gnu = { version = '*', targets = ["aarch64-unknown-linux-gnu"] }
# gcc-arm-linux-gnueabihf = { version = '*', targets = ["armv7-unknown-linux-gnueabihf"] }
# arm-linux-gnueabihf-gcc = { version = '*', targets = ["armv7-unknown-linux-gnueabihf"] }
